config/openstack/lyra/api-service.yaml
kind: Service
apiVersion: v1

metadata:
  annotations:
    prometheus.io/scrape: "true"
  name: api

spec:
  selector:
    name: api
  ports: 
    - port: 80
